--- a/static/css/form.css
+++ b/static/css/form.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto');
+
+form {
+  font-family: 'Roboto', sans-serif;
+}
+
 textarea:not(textarea),
 textarea.form-control:not(textarea),
 input.form-control:not(textarea),
