--- a/static/css/signup.css
+++ b/static/css/signup.css
@@ -1,4 +1,6 @@
-body {font-family: Arial, Helvetica, sans-serif;}
+@import url('https://fonts.googleapis.com/css?family=Roboto');
+
+body {font-family: 'Roboto', sans-serif;}
 * {box-sizing: border-box}
 
 /* Full-width input fields */
